<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.intel.nizhny.yamba.StatusActivity">

    <Button
        android:id="@+id/status_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/status_text"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:onClick="onClickPost"
        android:text="@string/status_button"/>

    <EditText
        android:id="@+id/status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/status_button"
        android:layout_toStartOf="@+id/status_button"
        android:gravity="left|top"
        android:maxLength="140"
        android:hint="@string/status_text_hint"/>

    <TextView
        android:id="@+id/status_text_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:textAppearance="?android:attr/textAppearanceSmall"
        tools:text="140"/>
</RelativeLayout>
